[package]
name = "token_scanner"
version = "0.1.0"
authors = ["Shuyang Sun <sunbuffett@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maplit = "1.0.2"
dot = "0.1.4"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
